--- a/reference.bib
+++ b/reference.bib
@@ -304,7 +304,7 @@
   location = {{Providence, R.I}},
   isbn = {978-0-8218-3541-8},
   keywords = {Geometry; Algebraic,Grothendieck categories,Grothendieck groups},
-  note = {OCLC: ocm61362228},
+  note = {第5章の内容はドラフト版が[Vis07]として公開されている．},
   number = {v. 123},
   pagetotal = {339},
   series = {Mathematical Surveys and Monographs}
@@ -686,6 +686,20 @@
   langid = {english}
 }
 
+@incollection{RC71,
+  title = {Travaux récents de M. Artin},
+  booktitle = {Séminaire Bourbaki : vol. 1968/69, exposés 347-363},
+  author = {Raynaud, Michel and {Collectif}},
+  date = {1971},
+  pages = {279--295},
+  publisher = {{Springer-Verlag}},
+  url = {http://www.numdam.org/item/SB_1968-1969__11__279_0},
+  annotation = {talk:363},
+  langid = {french},
+  number = {11},
+  series = {Séminaire Bourbaki}
+}
+
 @article{Rydh10,
   title = {Submersions and Effective Descent of Étale Morphisms},
   author = {Rydh, David},
@@ -717,29 +731,14 @@
   title = {Group {{Schemes}}},
   author = {彰紀, 七条},
   date = {2018-09},
-  url = {https://github.com/ShitijyouA/MathNotes/blob/master/GroupSchemes/main.pdf}
+  url = {https://github.com/shitijyou-a/MathNotes/blob/master/GroupSchemes/main.pdf}
 }
 
 @report{SA18a,
-  title = {Algebraic {{Stacks}}},
+  title = {Seminor for {{Algebraic Stacks}}},
   author = {彰紀, 七条},
   date = {2018-09},
-  url = {https://github.com/ShitijyouA/MathNotes/tree/master/AlgebraicStacks}
-}
-
-@incollection{SB_1968-1969__11__279_0,
-  title = {Travaux récents de M. Artin},
-  booktitle = {Séminaire Bourbaki : vol. 1968/69, exposés 347-363},
-  author = {Raynaud, Michel and {Collectif}},
-  date = {1971},
-  pages = {279--295},
-  publisher = {{Springer-Verlag}},
-  url = {http://www.numdam.org/item/SB_1968-1969__11__279_0},
-  annotation = {talk:363},
-  langid = {french},
-  number = {11},
-  series = {Séminaire Bourbaki},
-  zmnumber = {0207.51501}
+  url = {https://github.com/shitijyou-a/MathNotes/tree/master/SeminorForAlgebraicStacks}
 }
 
 @article{Seshadri72,
@@ -817,12 +816,19 @@
   series = {Universitätsdrucke {{Göttingen}}}
 }
 
-@report{Vistoli08,
+@article{Vistoli07,
   title = {Notes on {{Grothendieck}} Topologies, Fibered Categories and Descent Theory},
   author = {Vistoli, Angelo},
-  date = {2008-10-02},
-  url = {http://homepage.sns.it/vistoli/descent.pdf},
-  file = {/home/kiimasanobu/Zotero/storage/RMELINPH/Notes on Grothendieck topologies, fibered categories and descent theory(A_Vistoli).pdf}
+  date = {2007-05-24},
+  url = {http://arxiv.org/abs/math/0412512},
+  urldate = {2020-02-15},
+  abstract = {This is an introduction to Grothendieck's descent theory, with some stress on the general machinery of fibered categories and stacks.},
+  annotation = {Comment: 114 pages. I have corrected a finite, but extremely high, number of errors that have been pointed out to me by various readers. These were mostly typos, but a couple were substantial},
+  archivePrefix = {arXiv},
+  eprint = {math/0412512},
+  eprinttype = {arxiv},
+  file = {/home/kiimasanobu/Zotero/storage/PM6WCYXG/Vistoli - 2007 - Notes on Grothendieck topologies, fibered categori.pdf;/home/kiimasanobu/Zotero/storage/K5ERAUFD/0412512.html},
+  keywords = {Mathematics - Algebraic Geometry,Mathematics - Category Theory}
 }
 
 
