亜群のファイバー圏について命題を追加

--- a/master.tex
+++ b/master.tex
@@ -789,14 +789,15 @@
 
     \begin{Lemma}
         ファイブレーション$\cat{X} \to \cat{B}$を考える．
-        $\cat{X}$が亜群のファイバー圏ならば，
-        任意の$b \in \cat{B}$に対してファイバー$\cat{X}(b)$は亜群である．
+        $\cat{X}$が亜群のファイバー圏であることと，
+        任意の$b \in \cat{B}$に対してファイバー$\cat{X}(b)$は亜群であることは同値である
     \end{Lemma}
     \begin{proof}
-        一般に，同型射上のデカルト射は同型射である（\cite{FGAexp} 第$3$章）．
+        一般に，同型射上のデカルト射は同型射である（命題(\ref{prop:iso_over_iso})）．
         $\cat{X}$が亜群のファイバー圏ならば
         ファイバー$\cat{X}(b)$の射は恒等射$\id[b]$上のデカルト射だから，
         補題が成り立つ．
+        逆は容易．\cite{SP} 003Vにも証明が有る．
     \end{proof}
 
 \subsection{スタック}
