renew two reference.bib

--- a/reference.bib
+++ b/reference.bib
@@ -75,7 +75,7 @@
   eprint = {1812.01128},
   eprinttype = {arxiv},
   file = {/home/kiimasanobu/Zotero/storage/22PLJKIC/Alper et al. - 2019 - Existence of moduli spaces for algebraic stacks.pdf;/home/kiimasanobu/Zotero/storage/YV3TL9IB/1812.html},
-  keywords = {14D23; 14D22; 14H60; 18E15,Mathematics - Algebraic Geometry},
+  keywords = {Mathematics - Algebraic Geometry},
   primaryClass = {math}
 }
 
@@ -240,7 +240,7 @@
   eprint = {1308.2604},
   eprinttype = {arxiv},
   file = {/home/kiimasanobu/Zotero/storage/PAWHXM97/Drinfeld - 2015 - On algebraic spaces with an action of G_m.pdf;/home/kiimasanobu/Zotero/storage/M6Z49VWD/1308.html},
-  keywords = {Mathematics - Algebraic Geometry,Mathematics - Representation Theory,Primary 14L30; Secondary 14D24; 20G05; 22E57},
+  keywords = {Mathematics - Algebraic Geometry,Mathematics - Representation Theory},
   primaryClass = {math}
 }
 
@@ -453,7 +453,7 @@
   eprint = {1903.06484},
   eprinttype = {arxiv},
   file = {/home/kiimasanobu/Zotero/storage/BCZJLXVB/Kambe - 2019 - Computable Bia l ynicki-Birula decomposition of t.pdf;/home/kiimasanobu/Zotero/storage/GBKUTDUH/1903.html},
-  keywords = {14C05; 13P10; 13F20,Mathematics - Algebraic Geometry},
+  keywords = {Mathematics - Algebraic Geometry},
   primaryClass = {math}
 }
 
@@ -521,6 +521,19 @@
   publisher = {{Springer-Verlag Berlin Heidelberg}},
   doi = {10.1007/3-540-27950-4},
   series = {Grundlehren Der Mathematischen {{Wissenschaften}}}
+}
+
+@thesis{Lin16,
+  title = {Categories of Spaces Built from Local Models},
+  author = {Lin, Low Zhen},
+  date = {2016-06-20},
+  institution = {{University of Cambridge}},
+  abstract = {Many of the classes of objects studied in geometry are defined by first choosing aclass of nice spaces and then allowing oneself to glue these local models togetherto construct more general spaces. The most well-known examples are manifoldsand schemes. The main purpose of this thesis is to give a unified account of thisprocedure of constructing a category of spaces built from local models and tostudy the general properties of such categories of spaces. The theory developedhere will be illustrated with reference to examples, including the aforementionedmanifolds and schemes.
+    For concreteness, consider the passage from commutative rings to schemes.There are three main steps: first, one identifies a distinguished class of ring homomorphisms corresponding to open immersions of schemes; second, one definesthe notion of an open covering in terms of these distinguished homomorphisms;and finally, one embeds the opposite of the category of commutative rings inan ambient category in which one can glue (the formal duals of) commutativerings along (the formal duals of) distinguished homomorphisms. Traditionally,the ambient category is taken to be the category of locally ringed spaces, but following Grothendieck, one could equally well work in the category of sheaves forthe large Zariski site—this is the so-called ‘functor of points approach’. A thirdoption, related to the exact completion of a category, is described in this thesis.
+    The main result can be summarised thus: categories of spaces built from localmodels are extensive categories with a class of distinguished morphisms, subject to various stability axioms, such that certain equivalence relations (definedrelative to the class of distinguished morphisms) have pullback-stable quotients;moreover, this construction is functorial and has a universal property.},
+  file = {/home/kiimasanobu/Desktop/Categories of spaces built from local models(Low_Zhen_Lin).pdf;/home/kiimasanobu/Zotero/storage/U6NRD95A/Categories of spaces built from local models(Low_Zhen_Lin).pdf},
+  langid = {english},
+  pagetotal = {261}
 }
 
 @book{Liu10,
@@ -724,7 +737,7 @@
   doi = {10.1090/S1056-3911-2013-00615-3},
   annotation = {Comment: 36 pages; the proof of the existence of quasi-finite flat presentations has been excluded (now in 1005.2171); quasi-separatedness assumptions dropped; some parts have been reorganized; title changed from "Existence of quotients by finite groups and coarse moduli spaces"},
   file = {/home/kiimasanobu/Zotero/storage/MPH59LP7/Rydh - 2013 - Existence and properties of geometric quotients.pdf;/home/kiimasanobu/Zotero/storage/3EBC5L4T/0708.html},
-  keywords = {14L30; 14A20,Mathematics - Algebraic Geometry}
+  keywords = {Mathematics - Algebraic Geometry}
 }
 
 @report{SA18,
