TeXLive2020に合わせて再コンパイル．\cite*を\nociteに．

--- a/master.tex
+++ b/master.tex
@@ -341,7 +341,7 @@
         \node [below=5pt of B] {in $\cat{B}$};
         \draw [->, line width=1.5pt] (X) edge (B);
         \node at (0.3,1.55) {$\pi$};
-%        \draw (3.5,4) -- (3.5,-1);
+        %% \draw (3.5,4) -- (3.5,-1);
         \node at (-3,4) {($1$)};
         \end{tikzpicture}
         \qquad
@@ -374,7 +374,7 @@
         \tablefootnote{すなわち，$\pi(x)=u, \pi(x \to y)=u \to \pi(y)$を満たす．}
         \underline{$x \in \cat{X}$とデカルト射$x \to y \in \cat{X}$}を，
         $u \to \pi(y)$のデカルト持ち上げ (cartesian lifting) と呼ぶ．
-        %%% {{{
+        % {{{
         \begin{center}
         \begin{tikzpicture}[mybox/.style={draw, inner sep=5pt}]
         \node[mybox] (X) at (0,2){%
@@ -394,7 +394,7 @@
         \node at (0.3,1) {$\pi$};
         \end{tikzpicture}
         \end{center}
-        %%% }}}
+        %% }}}
         デカルト持ち上げで得られる対象（ここでの$x$）を$\phi^*y$と書く．
 
     \item
@@ -514,7 +514,7 @@
         \]
     \end{Remark}
 
-    \begin{Prop}[\cite{FGAexp} chapter 5]\cite*{Vistoli07}
+    \begin{Prop}[\cite{FGAexp} chapter 5]\nocite{Vistoli07}
     \begin{myenum}
     \item
         デカルト射の合成はデカルト射である．
